procore_logs/admin_equipment_logs/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-equipment-logs-frontend
spec:
  selector:
    app: admin-equipment-logs
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
